feat: add header

--- a/src/style_scss/configuration/mixins.scss
+++ b/src/style_scss/configuration/mixins.scss
@@ -3,58 +3,11 @@
 @use "sass:math";
 @use "sass:meta";
 
-// Переменные, мапы и списки
-
-$colors-map: (
-    "base": #000000,
-    "level 1": #181823,
-    "light grey": #DEECF9,
-    "dark grey": #C7E0F4,
-    "text": #FFFFFF,
-    "primary": #5221E6,
-    "green accent": #3CC74E,
-    "pink accent": #E95D90,
-    "peach accent": #FFF3E4,
-    "violet accent": #FBE4FF,
-);
-
-@function color($color-name) {
-    @return map.get($colors-map, $color-name);
-}
-
-$font-weights-map: (
-    "thin": 100,
-    "extra-light": 200,
-    "light": 300,
-    "regular": 400,
-    "medium": 500,
-    "semi-bold": 600,
-    "bold": 700,
-    "extra-bold": 800,
-    "black": 900,
-    "extra-black": 1000
-);
-
-@function font-weight($weight-name) {
-    @return map.get($font-weights-map, $weight-name);
-}
-
-$text-list: (
-);
-
-$dynamic-text-list: (
-);
-
-// Миксины
-
-$breakpoints: (
-    tablet: 768px,
-    desktop: 1440px
-);
+@use "./maps.scss" as *;
 
 @mixin respond-to($media) {
-    @if map.has-key($breakpoints, $media) {
-        @media (min-width: map.get($breakpoints, $media)) {
+    @if map.has-key($breakpoints-map, $media) {
+        @media (min-width: map.get($breakpoints-map, $media)) {
             @content;
         }
     } @else {
@@ -298,89 +251,4 @@ $breakpoints: (
     background-repeat: $repeat;
     background-size: $size;
     background-position: $position;
-}
-
-// Комплексные шаблоны
-
-@each $item in $text-list {
-    $name: list.nth($item, 1);
-    $font-family: list.nth($item, 2);
-    $font-weight: list.nth($item, 3);
-    $font-style: list.nth($item, 4);
-    $color: list.nth($item, 5);
-    $font-size: list.nth($item, 6);
-    $desktop-font-size: list.nth($item, 7);
-
-    %#{$name} {
-        font-family: $font-family;
-        font-weight: font-weight($font-weight);
-        font-style: $font-style;
-        font-size: $font-size;
-        color: $color;
-        @if $font-size != $desktop-font-size {
-            @include respond-to(desktop) {
-                font-size: $desktop-font-size;
-            }
-        }
-    }
-}
-
-@each $item in $dynamic-text-list {
-    $name: list.nth($item, 1);
-    $font-family: list.nth($item, 2);
-    $font-weight: list.nth($item, 3);
-    $font-style: list.nth($item, 4);
-    $color: list.nth($item, 5);
-    $hover-color: list.nth($item, 6);
-    $active-color: list.nth($item, 7);
-    $font-size: list.nth($item, 8);
-    $desktop-font-size: list.nth($item, 9);
-
-    %#{$name} {
-        @extend %simple-transition;
-        font-family: $font-family;
-        font-weight: font-weight($font-weight);
-        font-style: $font-style;
-        color: $color;
-        font-size: $font-size;
-        &:hover {
-            color: $hover-color;
-        }
-        &:active {
-            color: $active-color;
-        }
-        @if $font-size != $desktop-font-size {
-            @include respond-to(desktop) {
-                font-size: $desktop-font-size;
-            }
-        }
-    }
-}
-
-// Простые шаблоны
-
-%container {
-    width: 256px;
-    margin: 0 auto;
-    @include respond-to(desktop) {
-        width: 1110px;
-    }
-}
-
-%slider-window {
-    overflow-x: scroll;
-    overflow-y: hidden;
-    scroll-snap-type: x mandatory;
-    @include respond-to("desktop") {
-        overflow-x: hidden;
-    }
-}
-
-%slides {
-    transition: transform 0.5s ease-in-out;
-}
-
-%slide {
-    scroll-snap-align: start;
-    position: relative;
 }
