--- a/src/style_scss/configuration/lists.scss
+++ b/src/style_scss/configuration/lists.scss
@@ -7,6 +7,8 @@
 
 $text-list: (
     "header-nav" "Sen" regular normal color("text") 16px 16px 16px,
+    "hero-title" "Sen" bold normal color("text") 32px 56px 78px,
+    "hero-text" "Sen" regular normal color("text") 18px 18px 18px,
 );
 
 $dynamic-text-list: (
