feat: add experience

--- a/src/style_scss/configuration/lists.scss
+++ b/src/style_scss/configuration/lists.scss
@@ -9,6 +9,11 @@ $text-list: (
     "header-nav" "Sen" regular normal color("text") 16px 16px 16px,
     "hero-title" "Sen" bold normal color("text") 32px 56px 78px,
     "hero-text" "Sen" regular normal color("text") 18px 18px 18px,
+    "heading-second" "Sen" bold normal color("text") 32px 55px 55px,
+    "subheading" "Sen" bold normal color("text-black") 16px 16px 16px,
+    "experience-card-num" "Sen" regular normal color("light grey") 117px 117px 117px,
+    "heading-third" "Sen" bold normal color("text") 24px 24px 24px,
+    "text-black" "Sen" regular normal color("text-black") 16px 16px 16px,
 );
 
 $dynamic-text-list: (
