--- a/src/style_scss/configuration/maps.scss
+++ b/src/style_scss/configuration/maps.scss
@@ -8,6 +8,7 @@ $colors-map: (
     "level_1": #181823,
     "light grey": #DEECF9,
     "dark grey": #C7E0F4,
+    "text-black": #8491A0,
     "text": #FFFFFF,
     "primary": #5221E6,
     "green accent": #3CC74E,
