--- a/src/style_scss/pages/main/hero.scss
+++ b/src/style_scss/pages/main/hero.scss
@@ -4,6 +4,7 @@
     background-image: url('@assets/img/hero-sm.png');
     background-repeat: repeat-x;
     background-position: center top;
+    @include spacing(padding, bottom, 40px);
     @include respond-to(tablet) {
         background-image: url('@assets/img/hero-md.png');
         background-position: center left;
@@ -15,10 +16,11 @@
         @include spacing(padding, y, 224px);
     }
     &__container {
+        @include spacing(padding, top, 336px);
         @include respond-to(tablet) {
             @include size(default, 408px, 475px);
             @include flex(on, column, $justify: space-between);
-            @include spacing(margin, left, auto);
+            @include spacing((margin, padding), (left, top), auto, null, null, 0px);
         }
         @include respond-to(desktop) {
             @include size(default, 738px, 368px);
@@ -26,7 +28,7 @@
     }
     &__title {
         @extend %hero-title;
-        @include spacing(padding, (top, bottom), 336px, 16px);
+        @include spacing(padding, bottom, 16px);
         @include respond-to(tablet) {
             @include spacing(padding, (top, bottom), 0px, 0px);
         }
