--- a/src/style_scss/shared/common.scss
+++ b/src/style_scss/shared/common.scss
@@ -8,3 +8,22 @@ body {
     @extend %container;
 }
 
+.heading-container {
+    @include flex(on, column, $gap: 8px);
+    &__subheading {
+        @extend %subheading;
+    }
+    &__heading-second {
+        @extend %heading-second;
+    }
+}
+
+.heading-third {
+    @extend %heading-third;
+}
+
+.text {
+    &-black {
+        @extend %text-black;
+    }
+}
