feat: add Philosophy & values

--- a/src/style_scss/configuration/maps.scss
+++ b/src/style_scss/configuration/maps.scss
@@ -5,10 +5,11 @@
 
 $colors-map: (
     "base": #000000,
-    "level_1": #181823,
+    "level 1": #181823,
     "light grey": #DEECF9,
     "dark grey": #C7E0F4,
     "text-black": #8491A0,
+    "text-white": #5B6876,
     "text": #FFFFFF,
     "primary": #5221E6,
     "green accent": #3CC74E,
