--- a/src/style_scss/global.scss
+++ b/src/style_scss/global.scss
@@ -6,5 +6,7 @@
 @forward "./shared/common.scss";
 // Шапка
 @forward "./shared/header.scss";
+// Секция социальных сетей
+@forward './shared/social_section_white.scss';
 // Главная страница
 @forward "./pages/main.scss";
