--- a/src/style_scss/configuration/lists.scss
+++ b/src/style_scss/configuration/lists.scss
@@ -15,7 +15,9 @@ $text-list: (
     "experience-card-num" "Sen" regular normal color("light grey") 117px 117px 117px,
     "heading-third" "Sen" bold normal color("text") 24px 24px 24px,
     "text-black" "Sen" regular normal color("text-black") 18px 18px 18px,
-    "text-white" "Sen" regular normal color("text-white") 18px 18px 18px
+    "text-white" "Sen" regular normal color("text-white") 18px 18px 18px,
+    "text-black-small" "Sen" regular normal color("text-black") 16px 16px 16px,
+    "text-white-small" "Sen" regular normal color("text-white") 16px 16px 16px,
 );
 
 $dynamic-text-list: (
