feat: add project

--- a/src/style/pages/main.scss
+++ b/src/style/pages/main.scss
@@ -2,3 +2,4 @@
 @forward './main/experience.scss';
 @forward './main/skillset.scss';
 @forward './main/sponsor.scss';
+@forward './main/project.scss';
