--- a/src/style/pages/main/hero.scss
+++ b/src/style/pages/main/hero.scss
@@ -1,4 +1,4 @@
-@use "../../configuration/configuration.scss" as *;
+@use "../../utils/utils.scss" as *;
 
 .hero {
     @include spacing(padding, bottom, 48px);
