--- a/src/style/pages/main/skillset.scss
+++ b/src/style/pages/main/skillset.scss
@@ -1,4 +1,4 @@
-@use "../../configuration/configuration.scss" as *;
+@use "../../utils/utils.scss" as *;
 
 .skillset {
     @include spacing(padding, y, 64px);
