--- a/src/style/utils/lists.scss
+++ b/src/style/utils/lists.scss
@@ -18,6 +18,7 @@ $text-list: (
     "text-white" "Sen" regular normal color("text-white") 18px 18px 18px,
     "text-black-small" "Sen" regular normal color("text-black") 16px 16px 16px,
     "text-white-small" "Sen" regular normal color("text-white") 16px 16px 16px,
+    "button-text" "Sen" bold normal color("text") 18px 18px 18px
 );
 
 $dynamic-text-list: (
