--- a/src/style/utils/templates.scss
+++ b/src/style/utils/templates.scss
@@ -82,3 +82,13 @@
         @include size(default, 1296px);
     }
 }
+
+%button {
+    @include spacing(padding, (x, y), 32px, 24px);
+    @include border(all, 1px, solid, color("primary"));
+    transition: all 0.5s ease-in-out;
+    &:hover {
+        background-color: color("primary");
+        transition: all 0.5s ease-in-out;
+    }
+}
