feat: add dribble

--- a/src/style/pages/main/experience.scss
+++ b/src/style/pages/main/experience.scss
@@ -8,7 +8,7 @@
     @include respond-to(desktop) {
         @include spacing(padding, bottom, 120px);
     }
-    .heading-container {
+    &__heading-container {
         @include respond-to(desktop) {
             @include size(default, 689px);
         }
