--- a/src/style/utils/maps.scss
+++ b/src/style/utils/maps.scss
@@ -8,8 +8,8 @@ $colors-map: (
     "level 1": #181823,
     "light grey": #DEECF9,
     "dark grey": #C7E0F4,
-    "text-black": #8491A0,
-    "text-white": #5B6876,
+    "text-black": #5B6876,
+    "text-white": #8491A0,
     "text": #FFFFFF,
     "primary": #5221E6,
     "green accent": #3CC74E,
