--- a/src/styles/utils/_templates.scss
+++ b/src/styles/utils/_templates.scss
@@ -94,6 +94,7 @@
 }
 
 %link-nav {
+    cursor: pointer;
     transition: all 0.5s ease-in-out;
     &:hover {
         transition: all 0.5s ease-in-out;
