--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,7 +1,7 @@
 @forward 'base/font';
 @forward 'base/reset';
 @forward 'base/common';
-@forward 'components/buttons';
+@forward 'components/button';
 @forward 'components/container';
 @forward 'components/header';
 @forward 'components/heading-second';
