--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,15 +3,16 @@
 @forward 'base/common';
 @forward 'components/button';
 @forward 'components/container';
+@forward 'components/field';
 @forward 'components/header';
-@forward 'components/heading-second';
-@forward 'components/heading-third';
+@forward 'components/heading';
 @forward 'components/link';
 @forward 'components/social-section-white';
 @forward 'components/text';
 @forward 'pages/main/about';
 @forward 'pages/main/dribble';
 @forward 'pages/main/experience';
+@forward 'pages/main/feedback';
 @forward 'pages/main/hero';
 @forward 'pages/main/photography';
 @forward 'pages/main/project';
