--- a/src/styles/utils/_lists.scss
+++ b/src/styles/utils/_lists.scss
@@ -19,7 +19,9 @@ $text-list: (
   'text-black-small' 'Sen' regular normal color('text-black') 16px 16px 16px,
   'text-white-small' 'Sen' regular normal color('text-white') 16px 16px 16px,
   'button-text' 'Sen' bold normal color('text') 18px 18px 18px,
-  'link-nav' 'Sen' regular normal color('text') 16px 16px 16px
+  'link-nav' 'Sen' regular normal color('text') 16px 16px 16px,
+  'label' 'Sen' regular normal color('text') 16px 16px 16px,
+  'field-text' 'Sen' regular normal color('text') 18px 18px 18px,
 );
 
 $dynamic-text-list: (
