--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,10 +4,11 @@
 @forward 'components/button';
 @forward 'components/container';
 @forward 'components/field';
+@forward 'components/footer';
 @forward 'components/header';
 @forward 'components/heading';
 @forward 'components/link';
-@forward 'components/social-section-white';
+@forward 'components/section-social-white';
 @forward 'components/text';
 @forward 'pages/main/about';
 @forward 'pages/main/dribble';
