--- a/src/styles/pages/main/_skillset.scss
+++ b/src/styles/pages/main/_skillset.scss
@@ -10,7 +10,7 @@
   }
   &__container {
     @include respond-to(desktop) {
-      @include flex(on, row, $justify: space-between);
+      @include flex(on, $justify: space-between);
     }
   }
   &__main-content {
